# flight-booking

./: .gitignore  README.md
backend/: .env.example  .env.test  .gitignore  README.md  alembic.ini  documentation.md  manage.py  pyproject.toml  pytest.ini  requirements.txt  supabase-auth-implementation-guide.md  test_db.py  todo.md
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_seed_data_and_search_functions.py  003_indian_flight_data_and_indexes.py  97104f13e472_create_profiles_table_without_fk.py  9d7d84345b2a_initial_migration.py  a5127238f717_remove_users_table_and_update_bookings_.py  b913e2af69d1_seed_flight_data.py  c044ab7fa5d5_add_indexes_to_all_models_for_.py
backend/app/: main.py
backend/app/database/: database.py  init_db.py
backend/app/dependencies/: auth.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  airline.py  airport.py  base.py  booking.py  flight.py  passenger.py  payment.py  profile.py  user.py
backend/app/routers/: airports.py  auth.py  bookings.py  flight_admin.py  flights.py  payments.py  test_endpoints.py  users.py
backend/app/schemas/: booking.py  flight.py  payment.py  user.py
backend/app/services/: auth.py  booking.py  email.py  supabase_client.py
backend/app/templates/: booking_confirmation.html  booking_update.html  flight_status_update.html
backend/sky_bound_journeys_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py
backend/tests/integration/: test_auth_endpoints.py
backend/tests/routers/: test_bookings.py  test_flights.py  (+1 more)
(+86 files in other folders)
